# tardigrade-solver-tools

./: .gitignore  .gitlab-ci.yml  CD.sh  CMakeLists.txt  README.md  README.rst  TEST.sh  config.mk  config.xml  environment.txt  jenkins_build.sh  jenkins_deploy.sh  set_vars.sh
cmake/: FindERROR_TOOLS.cmake  FindErrorTools.cmake  FindVECTOR_TOOLS.cmake  FindVectorTools.cmake
configuration_files/: config.xml.multiagent_deploy_yellow  config.xml.multiagent_pr_builder  environment.yaml
docs/: CMakeLists.txt  api.rst  changelog.rst  conf.py  conf.py.in  index.rst  solver_tools.rst
modulefiles/: solver_tools-env  tardigrade_solver_tools-env
recipe/: conda_build_config.yaml  meta.yaml
src/cpp/: CMakeLists.txt  solver_tools.cpp  solver_tools.h  tardigrade_solver_tools.cpp  tardigrade_solver_tools.h
src/cpp/tests/: CMakeLists.txt  test_solver_tools.cpp  test_tardigrade_solver_tools.cpp
src/cpp/tests/solver_tools/: .gitignore  CMakeLists.txt  execute_tests.sh  makefile  test_solver_tools.cpp
src/python/: main.pyx  settings.py  setup.py
